--- a/templates/search-number.html
+++ b/templates/search-number.html
@@ -4,7 +4,12 @@
 <div class='container'>
     <div class="row">
         <div class="col-md-4 order-md-2 mb-4">
-            <h4>Ticket Information</h4>
+            <h4>Ticket Information</h4><form action='#' method='post' class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" name='key'
+                       placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0"
+                        type="submit">Search</button>
+            </form>
             <ul class="list-group mb-3">
                 <li class="list-group-item d-flex">
                     <div>
