--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,12 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e8e8e8;">
         <a class="navbar-brand" href="#">Jira Tickets</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent"
@@ -23,12 +24,16 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="/">Home <span
+                              class="sr-only">(current)</span></a>
+                </li> -->
+                <li class="nav-item active">
+                    <a class="nav-link" href="/tickets">Search <span
                               class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/search-number">Ticket Number <span
+                    <a class="nav-link" href="/4000">Tickets <span
                               class="sr-only">(current)</span></a>
                 </li>
             </ul>
