--- a/static/style.css
+++ b/static/style.css
@@ -19,15 +19,16 @@ form {
 
 
 p {
-    background-color: #b1b1b1;
+    background-color: #e8e8e8;
     color:black;
     padding:10px;
+    overflow: scroll;
 }
 
 nav {
     margin:10px 10px 50px 10px;
 }
-nav, table, form{
+nav, table, form, p{
     /* box-shadow:         3px 3px 5px 6px rgb(180, 180, 180); */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }
