--- a/templates/display_number.html
+++ b/templates/display_number.html
@@ -2,16 +2,16 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
 <div class='container'>
-    <div class="row">
-        <div class="col-md-4 order-md-2 mb-4">
-            <h4>Ticket Information</h4><form action='#' method='post' class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" name='key'
-                       placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0"
-                        type="submit">Search</button>
-            </form>
-            <ul class="list-group mb-3">
-                <li class="list-group-item d-flex">
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item">
+                        <form action='#' method='post' class="form-inline form-text-search">
+                            <input class="form-control mr-sm-2" type="search" name='key'
+                                   placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0"
+                                    type="submit">Search</button>
+                        </form>
+                </li>
+                <li class="list-group-item ">
                     <div>
                         <small class="text-muted">Assignee</small>
                         <h6 class="my-0">{% if assignee %}   
@@ -20,31 +20,28 @@
                         {%endif %}</h6>
                     </div>
                 </li>
-                <li class="list-group-item d-flex">
+                <li class="list-group-item ">
                     <div>
                         <small class="text-muted">Reporter</small>
                         <h6 class="my-0">{{reporter}}</h6>
                     </div>
                 </li>
-                <li class="list-group-item d-flex">
+                <li class="list-group-item ">
                     <div>
                         <small class="text-muted">Account ID</small>
                         <h6 class="my-0">{{account_id}}   
                    </h6>
                     </div>
                 </li>
-
             </ul>
-        </div>
-        <div class="col-md-8 order-md-1">
-            <pre>{{ i }}</pre>
-
-             <pre>   <h2>FSUPPORT-{{num}}</h2></pre>
-                <hr>
-                <pre><h5>{{summary}}</h5></pre>
-               <pre> <p>{{description}}</pre>
-               <pre> {% for i in commentsArr %}</pre>
-                {% endfor %}
+    <div>
+        <div>
+         <h2>FSUPPORT-{{num}}</h2>
+            <pre><h5>{{summary}}</h5></pre>
+           <pre> {{description}}</pre>
+           {% for i in commentsArr %}
+           <pre>{{i}}</pre>
+            {% endfor %}
         </div>
     </div>
 </div>
